test: add ControllerTest class for Feedback__c controller - Added unit tests for controller methods that handle Feedback__c records - Implemented HTTP callout mocks with FeedbacbkHttpMock for sentiment analysis - Validated data retrieval, sentiment processing, and chart data aggregation

--- a/force-app/main/default/classes/Controller.cls
+++ b/force-app/main/default/classes/Controller.cls
@@ -66,7 +66,7 @@ public with sharing class controller {
     }
 
     @AuraEnabled
-    public static Map<Integer, Integer> getDataFraficDonut(Integer days, List<String> category){
+    public static Map<Integer, Integer> getDataGraficDonut(Integer days, List<String> category){
 
         if(days == null){
            days = 1000;
@@ -96,4 +96,5 @@ public with sharing class controller {
 
         return fbData;
     }
+
 }
